fix: link hover bg not showing in some places

--- a/src/Components/layout.module.css
+++ b/src/Components/layout.module.css
@@ -175,7 +175,7 @@ h5 {
 
 .note {
   background: lavender;
-  padding: 14px;
+  padding: 2em;
   border-radius: 4px;
   width: auto;
   margin-left: 1em;
